Bug inicio examen

--- a/index.html
+++ b/index.html
@@ -403,6 +403,10 @@ label.option.incorrect{
             <div>Media general</div><div id="avgPercent">—</div>
           </div>
 
+          <div style="display:flex;justify-content:space-between;">
+            <div>Modo actual</div><div id="modeLabel">—</div>
+          </div>
+
         </div>
       </div>
 
