Code mas pequeño

--- a/index.html
+++ b/index.html
@@ -321,6 +321,13 @@ label.option.incorrect{
   .features{grid-template-columns:1fr;}
   #countdownOverlay{font-size:4rem;}
 }
+
+@media (max-width:600px){
+  .code-block code{
+    font-size:0.78rem;
+  }
+}
+
 </style>
 </head>
 
